cmake_minimum_required(VERSION 3.12)
project(FinalHW1)

set(CMAKE_CXX_STANDARD 14)

add_executable(FinalHW1 BackupRestaurant.cpp BaseAction.cpp Close.cpp CloseAll.cpp Customer.cpp Dish.cpp MoveCustomer.cpp OpenTable.cpp Order.cpp PrintActionsLog.cpp PrintTableStatus.cpp PrintMenu.cpp Restaurant.cpp RestoreResturant.cpp Table.cpp main.cpp AlchoholicCustomer.cpp SpicyCustomer.cpp SpicyCustomer.h CheapCustomer.cpp CheapCustomer.h VegetarianCustomer.cpp VegetarianCustomer.h AlchoholicCustomer.cpp AlchoholicCustomer.h)